# ansible-role-apache

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: main.yml
templates/: httpd.conf.j2
templates/etc/apache2/: apache2.conf.j2
vars/: alpine.yml  archlinux.yml  debian.yml  main.yml  redhat.yml  suse.yml
