[project]
name = "apache"
version = "0.0.0"
description = "Ansible role for setting up apache httpd."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["apache", "httpd", "proxy", "vhost", "webserver"]
repository = "https://github.com/jomrr/ansible-role-httpd"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
